--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,5 @@ dependencies {
 
     // Accompanist
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.30.1"
+    implementation "com.google.accompanist:accompanist-blur:0.19.0"
 }
