--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,7 @@ dependencies {
 
     // Accompanist
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.30.1"
+
+    // DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
