build: add Icons Extended dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,4 +92,7 @@ dependencies {
 
     // DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    // Icons
+    implementation "androidx.compose.material:material-icons-extended:1.4.3"
 }
