--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,5 +99,6 @@ dependencies {
 
     // Hilt
     implementation "com.google.dagger:hilt-android:2.44"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     kapt "com.google.dagger:hilt-compiler:2.44"
 }
