--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.iml
 .gradle
+/local.properties
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
@@ -12,3 +13,4 @@
 /captures
 .externalNativeBuild
 .cxx
+local.properties
