docs: update readme links

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-sdk.dir=YOUR_SDK_DIR_HERE
-API_KEY=YOUR_API_KEY_HERE
+sdk.dir=/Users/daavsnts/Library/Android/sdk
+API_KEY=e35c2104fffb88f5f3b425f6024d334f
